--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
+    "test": "jest",
     "make": "electron-forge make",
     "publishOnly": "electron-forge publish"
   },
@@ -93,6 +94,7 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.50",
     "@electron-forge/plugin-webpack": "^6.0.0-beta.50",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@types/jest": "^25.2.3",
     "@types/node": "^13.9.8",
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.31",
@@ -111,6 +113,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
+    "jest": "^26.0.1",
     "node-loader": "^0.6.0",
     "react-hot-loader": "^4.12.20",
     "style-loader": "^1.1.3",
