--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,10 @@
     "sourceMap": true,
     "target": "es5"
   },
-  "exclude": ["node_modules", "dist", "out", ".webpack"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "out",
+    ".webpack"
+  ]
 }
