--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "test": "jest",
+    "test:watch": "yarn test -- --watchAll",
     "make": "electron-forge make",
     "publishOnly": "electron-forge publish"
   },
@@ -78,6 +79,8 @@
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "styled-components": "^5.1.0",
+    "styled-icons": "^10.2.1",
     "unzipper": "^0.10.10",
     "url-loader": "^4.0.0"
   },
@@ -99,6 +102,7 @@
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.31",
     "@types/react-dom": "^16.9.6",
+    "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "babel-eslint": "^10.1.0",
@@ -106,18 +110,30 @@
     "css-loader": "^3.4.2",
     "electron": "^8.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-flowtype": "^4.7.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
+    "husky": ">=4",
     "jest": "^26.0.1",
+    "lint-staged": ">=10",
     "node-loader": "^0.6.0",
+    "prettier": "^2.0.5",
     "react-hot-loader": "^4.12.20",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
