:ok_hand: add redux with weeklyReports and lastDayReport reducers
Add redux removing react hooks

--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.0",
     "styled-icons": "^10.2.1",
     "unzipper": "^0.10.10",
@@ -102,6 +104,8 @@
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.31",
     "@types/react-dom": "^16.9.6",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
